# rust-tpm2-policy

./: Cargo.toml
src/: error.rs  lib.rs  structures.rs
tests/: integration_test.rs  utils.rs
tests/fixtures/: pubkey.json  signedpolicy.json
