[package]
name = "tpm2-policy"
description = "Specify and send TPM2 policies to satisfy object authorization"
version = "0.2.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tss-esapi = "4.0.6-alpha.1"
serde = "1.0"
base64 = "0.12.1"
