[package]
name = "tpm2-policy"
description = "Specify and send TPM2 policies to satisfy object authorization"
version = "0.3.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"
homepage = "https://github.com/fedora-iot/rust-tpm2-policy"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tss-esapi = "4.0.10-alpha.1"
serde = "1.0"
base64 = "0.12.1"

[dev-dependencies]
tempfile = "3.1.0"
serde_json = "1.0.59"
